--- a/src/client/styles/InputBox.css
+++ b/src/client/styles/InputBox.css
@@ -35,7 +35,6 @@ textarea {
     font-size: 20px;
     cursor: 'text';
     text-align: left;
-    min-height: 80px;
     max-height: 80vh;
     width: 100%;
     height: 100%;
